--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "^12.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
